ONE CUTSCENE LESS

--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -263,6 +263,8 @@
     <Xml Include="Game\assets\xml\CutsceneAfterBossTutorial.xml">
       <SubType>Designer</SubType>
     </Xml>
+    <Xml Include="Game\assets\xml\CutsceneDrakeQuest3.xml" />
+    <Xml Include="Game\assets\xml\CutsceneFinalGame.xml" />
     <Xml Include="Game\assets\xml\CutsceneFinalRoom.xml">
       <SubType>Designer</SubType>
     </Xml>
