--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -273,6 +273,7 @@
     <Xml Include="Game\assets\xml\CutsceneHomeSleep2.xml" />
     <Xml Include="Game\assets\xml\CutsceneLobbyCredits.xml" />
     <Xml Include="Game\assets\xml\CutsceneLobbyQuest2.xml" />
+    <Xml Include="Game\assets\xml\CutsceneLobbyQuest3.xml" />
     <Xml Include="Game\assets\xml\CutsceneLobbyTutorial.xml" />
     <Xml Include="Game\assets\xml\CutsceneMiddleRoom.xml" />
     <Xml Include="Game\assets\xml\CutsceneQueenQuest2.xml" />
