Intro video upload

--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -258,6 +258,7 @@
     <ClInclude Include="u1VerticalSlider.h" />
   </ItemGroup>
   <ItemGroup>
+    <Xml Include="..\Game\assets\xml\config.xml" />
     <Xml Include="Game\assets\xml\config.xml">
       <SubType>Designer</SubType>
     </Xml>
