--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -592,6 +592,9 @@
     <None Include="Game\assets\entities\Warrior.tsx">
       <Filter>Entities\XML</Filter>
     </None>
+    <None Include="..\Game\assets\entities\Little_Girl.tsx">
+      <Filter>Entities\XML</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Cutscenes">
