--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -521,64 +521,73 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="Game\assets\xml\CutsceneAfterBossTutorial.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
     <Xml Include="Game\assets\xml\CutsceneBlockPass.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneFinalRoom.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneLobbyTutorial.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneMiddleRoom.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneTutorial.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneAbility2Quest2.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneFinalRoomQuest2.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneHomeSleep.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneQueenQuest2.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneLobbyQuest2.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneHomeSleep2.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneDrakeQuest3.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneFinalGame.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneLobbyCredits.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="Game\assets\xml\CutsceneLobbyQuest3.xml">
       <Filter>Cutscenes\XML</Filter>
     </Xml>
     <Xml Include="..\Game\assets\xml\config.xml">
       <Filter>XML</Filter>
     </Xml>
-    <Xml Include="..\Game\assets\xml\Dialog.xml">
-      <Filter>XML</Filter>
-    </Xml>
     <Xml Include="..\Game\assets\xml\Rooms.xml">
       <Filter>XML</Filter>
     </Xml>
-    <Xml Include="..\Game\assets\xml\NPC.xml">
+    <Xml Include="..\Game\assets\xml\CutsceneAbility2Quest2.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneAfterBossTutorial.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneBegin.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneBlockPass.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneDrakeQuest3.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneFinalGame.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneFinalRoom.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneFinalRoomQuest2.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneHomeSleep.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneHomeSleep2.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneLittleDrake.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneLobbyCredits.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneLobbyQuest2.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneLobbyQuest3.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneLobbyTutorial.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneMiddleRoom.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneQueenQuest2.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneTutorial.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="Game\assets\xml\Rooms.xml">
+      <Filter>XML</Filter>
+    </Xml>
+    <Xml Include="Game\assets\xml\Dialog.xml">
       <Filter>XML</Filter>
     </Xml>
   </ItemGroup>
@@ -590,9 +599,6 @@
       <Filter>Entities\XML</Filter>
     </None>
     <None Include="Game\assets\entities\Warrior.tsx">
-      <Filter>Entities\XML</Filter>
-    </None>
-    <None Include="..\Game\assets\entities\Little_Girl.tsx">
       <Filter>Entities\XML</Filter>
     </None>
   </ItemGroup>
