--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -231,6 +231,8 @@
     <ClCompile Include="e1Spider.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="c1CutSceneFadeToBlack.cpp" />
+    <ClCompile Include="c1CutSceneVibration.cpp" />
     <ClCompile Include="e1AmazingDragon.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
@@ -239,12 +241,6 @@
     </ClCompile>
     <ClCompile Include="m1VideoPlayer.cpp">
       <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="c1CutSceneFadeToBlack.cpp">
-      <Filter>Cutscenes</Filter>
-    </ClCompile>
-    <ClCompile Include="c1CutSceneVibration.cpp">
-      <Filter>Cutscenes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -504,6 +500,8 @@
     <ClInclude Include="e1Spider.h">
       <Filter>Entities</Filter>
     </ClInclude>
+    <ClInclude Include="c1CutSceneFadeToBlack.h" />
+    <ClInclude Include="c1CutSceneVibration.h" />
     <ClInclude Include="e1AmazingDragon.h">
       <Filter>Entities</Filter>
     </ClInclude>
@@ -513,34 +511,19 @@
     <ClInclude Include="m1VideoPlayer.h">
       <Filter>Modules</Filter>
     </ClInclude>
-    <ClInclude Include="c1CutSceneVibration.h">
-      <Filter>Cutscenes</Filter>
-    </ClInclude>
-    <ClInclude Include="c1CutSceneFadeToBlack.h">
-      <Filter>Cutscenes</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="Game\assets\xml\CutsceneBlockPass.xml">
-      <Filter>Cutscenes\XML</Filter>
+    <Xml Include="Game\assets\xml\Dialog.xml">
+      <Filter>XML</Filter>
+    </Xml>
+    <Xml Include="Game\assets\xml\Rooms.xml">
+      <Filter>XML</Filter>
     </Xml>
     <Xml Include="..\Game\assets\xml\config.xml">
       <Filter>XML</Filter>
     </Xml>
     <Xml Include="..\Game\assets\xml\Rooms.xml">
       <Filter>XML</Filter>
-    </Xml>
-    <Xml Include="..\Game\assets\xml\CutsceneAbility2Quest2.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="..\Game\assets\xml\CutsceneAfterBossTutorial.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="..\Game\assets\xml\CutsceneBegin.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="..\Game\assets\xml\CutsceneBlockPass.xml">
-      <Filter>Cutscenes\XML</Filter>
     </Xml>
     <Xml Include="..\Game\assets\xml\CutsceneDrakeQuest3.xml">
       <Filter>Cutscenes\XML</Filter>
@@ -558,9 +541,6 @@
       <Filter>Cutscenes\XML</Filter>
     </Xml>
     <Xml Include="..\Game\assets\xml\CutsceneHomeSleep2.xml">
-      <Filter>Cutscenes\XML</Filter>
-    </Xml>
-    <Xml Include="..\Game\assets\xml\CutsceneLittleDrake.xml">
       <Filter>Cutscenes\XML</Filter>
     </Xml>
     <Xml Include="..\Game\assets\xml\CutsceneLobbyCredits.xml">
@@ -584,11 +564,20 @@
     <Xml Include="..\Game\assets\xml\CutsceneTutorial.xml">
       <Filter>Cutscenes\XML</Filter>
     </Xml>
-    <Xml Include="Game\assets\xml\Rooms.xml">
-      <Filter>XML</Filter>
+    <Xml Include="..\Game\assets\xml\CutsceneAbility2Quest2.xml">
+      <Filter>Cutscenes\XML</Filter>
     </Xml>
-    <Xml Include="Game\assets\xml\Dialog.xml">
-      <Filter>XML</Filter>
+    <Xml Include="..\Game\assets\xml\CutsceneAfterBossTutorial.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneBlockPass.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneBegin.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
+    <Xml Include="..\Game\assets\xml\CutsceneLittleDrake.xml">
+      <Filter>Cutscenes\XML</Filter>
     </Xml>
   </ItemGroup>
   <ItemGroup>
