--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -292,6 +292,17 @@
     <Image Include="Game\assets\ff_icon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\docs\christian-martinez-de-la-rosa.html" />
+    <None Include="..\..\docs\download.html" />
+    <None Include="..\..\docs\enric-perez-rifa.html" />
+    <None Include="..\..\docs\index.html" />
+    <None Include="..\..\docs\ivan-ropero-garcia.html" />
+    <None Include="..\..\docs\lluis-moreu-farran.html" />
+    <None Include="..\..\docs\marc-galvez-llorens.html" />
+    <None Include="..\..\docs\nadine-gutierrez-pociño.html" />
+    <None Include="..\..\docs\oriol-capdevila-salinas.html" />
+    <None Include="..\..\docs\styles.css" />
+    <None Include="..\..\docs\team.html" />
     <None Include="Game\assets\entities\CarnivorousPlant.tsx" />
     <None Include="Game\assets\entities\Enemy.tsx" />
     <None Include="Game\assets\entities\Warrior.tsx" />
