--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -278,6 +278,7 @@
     <Xml Include="..\Game\assets\xml\CutsceneMiddleRoom.xml" />
     <Xml Include="..\Game\assets\xml\CutsceneQueenQuest2.xml" />
     <Xml Include="..\Game\assets\xml\CutsceneTutorial.xml" />
+    <Xml Include="..\Game\assets\xml\NPC.xml" />
     <Xml Include="..\Game\assets\xml\Rooms.xml" />
     <Xml Include="Game\assets\xml\Dialog.xml" />
     <Xml Include="Game\assets\xml\CutsceneBlockPass.xml" />
